# LevelRenderer

./: .gitignore  BMPLoader.cpp  BMPLoader.h  BufferHelper.h  CMakeLists.txt  DefaultShader.hlsl  FileHelper.h  GameLevel.txt  Gateware.h  LevelRenderer.cpp  LevelRenderer.h  MatrixHelper.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Project Rubric.xlsx  README.md  README.txt  ShaderCompiler.cpp  ShaderCompiler.h  Stopwatch.cpp  Stopwatch.h  StringHelper.h  Texture2D.cpp  Texture2D.h  generate.bat  h2bParser.h  main.cpp  scene1.blend
Assets/: BearTrap_Closed.h2b  BearTrap_Open.h2b  Bomb.h2b  Brown_Cliff_01.h2b  Brown_Cliff_Bottom_01.h2b  Brown_Cliff_Bottom_Corner_01.h2b  Brown_Cliff_Bottom_Corner_Green_Top_01.h2b  Brown_Cliff_Bottom_Green_Top_01.h2b  Brown_Cliff_Corner_01.h2b  Brown_Cliff_Corner_Green_Top_01.h2b  Brown_Cliff_End_01.h2b  Brown_Cliff_End_Green_Top_01.h2b  Brown_Cliff_Green_Top_01.h2b  Brown_Cliff_Top_01.h2b  Brown_Cliff_Top_Corner_01.h2b  Brown_Waterfall_01.h2b  Brown_Waterfall_Top_01.h2b  Campfire_01.h2b  Chest.h2b  Cloud4.h2b  Cloud5.h2b  Coin.h2b  Crate (2).h2b  DefaultShader.hlsl  Fallen_Trunk_01.h2b  Flower_Red_01.h2b  Flower_Tall_Red_01.h2b  Flower_Tall_Yellow_01.h2b  Flower_Tall_Yellow_02.h2b  Flower_Yellow_01.h2b  Flower_Yellow_02.h2b  GameLevel2.txt  Grass (2).h2b  Grass1.h2b  Grass2.h2b  Grass_01.h2b  Grey_Cliff_01.h2b  Grey_Cliff_Bottom_01.h2b  Grey_Cliff_Bottom_Corner_01.h2b  Grey_Cliff_Bottom_Corner_Green_Top_01.h2b  (+199 more)
Assets/smallarms/: ak47.blend  mosin9130.blend
